# ohio

./: .gitignore  .python-version.current  .readthedocs.yml  LICENSE  MANIFEST.in  README.adoc  README.md  README.rst  channels-lock.scm  develop  manage.py  manifest.scm  setup.cfg  setup.py  tox.ini
doc/: conf.py  index.rst
doc/source/: ohio.ext.rst.bak  ohio.rst.bak
prof/: __main__.py  plot.py  profile.py  profiling-initial.md  profiling-latest.txt  profiling-latest.yaml  tool.py  util.py
prof/profilers/: copy_from.py  copy_to.py
profile/: profile.py  profiling.py
requirement/: dev.txt  docs.txt  profile.txt  test.txt
requirement/include/: ext.txt
src/: ohio.py
src/ohio/: __init__.py  baseio.py  csvio.py  iterio.py  pipeio.py
src/ohio/ext/: __init__.py  numpy.py  pandas.py
src/ohio/recipe/: __init__.py  dbjoin.py
test/: __init__.py  conftest.py  csvio_test.py  iterio_test.py  ohio_test.py  pipeio_test.py
test/ext_test/: numpy_test.py  pandas_test.py
test/recipe_test/: dbjoin_test.py
