[bumpversion]
commit = True
tag = True
tag_name = {new_version}
current_version = 0.3.1

[bumpversion:file:setup.py]

[bumpversion:file:src/ohio/__init__.py]

[bumpversion:file:doc/conf.py]

[bumpversion:file:doc/index.rst]

[bumpversion:file:README.rst]

[aliases]
test = pytest

[metadata]
license_files = LICENSE

